Replace URIs with URLs
Turns out, java.util.net.URI does not contain the facilities to actually
retrieve content. You have to transform it into a URL first. Well, in that
case, why not just have URLs?

Signed-off-by: Moses Mendoza <moses@puppet.com>